--- a/javascript-DOM/praktik-dom/kertas-gunting-batu/style.css
+++ b/javascript-DOM/praktik-dom/kertas-gunting-batu/style.css
@@ -18,6 +18,7 @@ h1 {
     justify-content: center;
     font-size: 40px;
     background-color: lightcoral;
+    height: 50px;
 }
 
 .player {
@@ -30,6 +31,7 @@ h1 {
     justify-content: center;
     gap: 20px;
     background-color: lightgreen;
+    height: 50px;
 }
 
 .info {
@@ -40,9 +42,10 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 50px;
+    font-size: 40px;
     font-family: 'Jersey 15';
     background-color: antiquewhite;
+    height: 20px;
 }
 
 .kertas, .gunting, .batu {
